# autospike-release

./: .gitignore  CITATION.bib  CITATION.cff  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
docs/: api.md  input_output.md  manual.md  paper.md
examples/: input_signal.csv  quickstart.py
src/autospike/: __init__.py  api.py  cli.py  encoders.py  io.py  synthetic.py
tests/: test_public_api.py
